@@ -28,6 +28,8 @@ ChangeLog.
 BETA RELEASE 0.5.1 : ??????????????????????
 
 # Fix use of POSIX capabilities with miredo-server.
+# Allow running miredo as root (if and only if explicitly enabled through
+  ./configure).
 
 =============================================================================
 BETA RELEASE 0.5.0 : Major feature enhancement
